--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babylonjs/core": "^7.1.0",
     "@babylonjs/loaders": "^7.1.0",
+    "@headlessui/react": "^1.7.18",
     "google-fonts": "^1.0.0",
     "next": "14.1.4",
     "react": "^18",
