--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babylonjs/core": "^7.1.0",
     "@babylonjs/loaders": "^7.1.0",
     "@headlessui/react": "^1.7.18",
+    "framer-motion": "^11.1.7",
     "google-fonts": "^1.0.0",
     "next": "14.1.4",
     "react": "^18",
